# plasma-2350-aurora

./: CMakeLists.txt  LICENSE  README.md
src/: aurora.cpp  colours.h  common_defaults.h
